swagger fix med delete och post
