# server/swagger.json
@@ -27,7 +27,7 @@
     "application/json"
   ],
   "paths": {
-    "/": {
+    "/newUser": {
       "post": {
         "tags": [
           "Users"
@@ -56,7 +56,7 @@
         }
       }
     },
-    "/users": {
+    "/": {
       "get": {
         "tags": [
           "Users"
@@ -72,14 +72,14 @@
         }
       }
     },
-    "/user/{id}": {
+    "/{id}": {
       "parameters": [
         {
           "name": "id",
           "in": "path",
           "required": true,
           "description": "ID of user that we want to find",
-          "type": "integer"
+          "type": "string"
         }
       ],
       "delete": {
@@ -131,7 +131,7 @@
       ],
       "properties": {
         "_id": {
-          "type": "integer",
+          "type": "string",
           "uniqueItems": true
         },
         "isPublic": {
